refactor: replace JWT auth with Spring Security session and update cart response DTO structure